--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,11 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Статистика</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-</head>
-<body>
-        <H1>Проверка!!!!</H1>
-</body>
-</html>
+<!-- extend from base layout -->
+{% extends "main/bases.html" %}
+{% block title %}
+    Статистика использования ресурсов
+{% endblock %}
+{% block content %}
+    <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+        <div class="fixed-top bg-primary bg-white">
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseConf" aria-expanded="false" aria-controls="collapseConf">
+               Настройки
+            </button>
+        </div>
+        <form action="" method="post" name="Config_form">
+            {% csrf_token %}
+            <div class="container collapse bg-info" id="collapseConf">
+                <div class="row" >
+                    <div class="col-12 pt-3">
+                            <H3 class="text-center">Выбор тегов для отслеживания:</H3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col mt-1 p-0">
+                        <H5 class="text-end"> Инфраструктура: </H5>
+                    </div>
+                    <div class="col mt-1">
+                        {{ ReportConfigForm.infrastructure_tag }}
+                    </div>
+                    <div class="col mt-1  p-0">
+                        <H5 class="text-end">Служба:</H5>
+                    </div>
+                    <div class="col mt-1">
+                        {{ ReportConfigForm.service_tag  }}
+                    </div>
+                    <div class="col mt-1  p-0">
+                        <H5 class="text-end">Приоритет:</H5>
+                    </div>
+                    <div class="col mt-1   p-0">
+                        {{ ReportConfigForm.priority_tag  }}
+                    </div>
+                    <div class="col  mt-1  p-0">
+                        <H5 class="text-end">Коментарий:</H5>
+                    </div>
+
+                    <div class="col mt-1">
+                         {{ ReportConfigForm.descr_track  }}
+                    </div>
+                    <div class="col mt-0">
+                            <input class="btn btn-primary btn-ligh" type="submit" value="Добавить"/>
+                    </div>
+                </div>
+
+            <br>
+        </form>
+        <form action="" method="post"  name="sp_tr_tags">
+            <div class="container-fluid">
+                {% for el in trcking_tags_table %}
+                    <div class="row">
+                        <div class="col">
+                            <h5>{{ el.infrastructure_tag }}</h5>
+                        </div>
+                        <div class="col">
+                            <h5>{{ el.service_tag }}</h5>
+                        </div>
+                        <div class="col">
+                            <h5>{{ el.priority_tag }}</h5>
+                        </div>
+                        <div class="col">
+                            <h5>{{ el.descr_track }}</h5>
+                        </div>
+                        <div class="col">
+                            <div class="form-actions">
+                                <input class="btn btn-warning" type="button" value="Удалить"/>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </form>
+    </header>
+
+{% endblock %}
